--- a/css/style.css
+++ b/css/style.css
@@ -130,7 +130,7 @@ button {
 }
 
 .navigation-item {
-    padding-right: 145px;
+    padding: 50px;
 }
 
 .slider-inner {
@@ -476,8 +476,52 @@ button {
 }
 
 .link {
-    color: #E2A100;
+    position: relative;
+    display: inline-block;
+    padding: 25px 30px;
+    margin: 40px 0;
+    color: #03e9f4;
+    text-decoration: none;
+    text-transform: uppercase;
+    transition: 0.5s;
+    letter-spacing: 4px;
+    overflow: hidden;
+    margin-right: 50px;
 }
+
+.link span {
+    position: absolute;
+    display: block;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 2px;
+    background: linear-gradient(270deg, transparent, #03e9f4);
+    animation: animate 1s linear infinite;
+    animation-delay: 0.50s;
+}
+
+.link:hover {
+    background: #03e9f4;
+    color: #050801;
+    box-shadow: 0 0 5px #03e9f4,
+        0 0 25px #03e9f4,
+        0 0 50px #03e9f4,
+        0 0 200px #03e9f4;
+    -webkit-box-reflect: below 1px linear-gradient(transparent, #0005);
+}
+
+@keyframes animate {
+    0% {
+        right: -100%;
+    }
+
+    50%,
+    100% {
+        right: 100%;
+    }
+}
+
 
 .footer {
     background: linear-gradient(130.68deg, #414141 0%, #2D2D2D 100.52%);
@@ -485,4 +529,7 @@ button {
 
 .footer__inner {
     display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 20px 50px;
 }
