--- a/css/style.css
+++ b/css/style.css
@@ -115,6 +115,7 @@ button {
     background:  linear-gradient(100deg, #2c2c2cde 1%, #1c1c1cd5 95.55%);
     /* background: #41414196; */
      width: 100%;
+     max-width: 1240px;
         padding: 0 10px;
 }
 
@@ -184,33 +185,33 @@ button {
 
 
 
-.slider-inner {
+.slider__inner {
     display: flex;
     justify-content: space-between;
-    align-items: flex-end;
+    align-items: center;
     flex-wrap: wrap;
     padding-top: 110px;
 }
 
-.slider-wrapper {
+.slider__wrapper {
     max-width: 447px;
     width: 100%;
     padding-left: 15px;
+    text-align: center;
 }
 
-.slide-subtitle {
-    font-family: 'next-art';
-    font-weight: 600;
-    font-size: 48px;
-    line-height: 54px;
-    align-items: center;
-}
 
-.slide-title {
+.slide__title {
     font-family: 'next-art';
     font-weight: bold;
-    font-size: 72px;
-    line-height: 82px;
+    font-size: 34px;
+    line-height: 1.5;
+    align-items: center;
+}
+.slide__txt{
+    font-family: 'next-art';
+    font-weight: bold;
+    font-size: 26px;
     align-items: center;
 }
 
@@ -532,7 +533,6 @@ display: flex;
     transition: 0.5s;
     letter-spacing: 4px;
     overflow: hidden;
-    margin-right: 50px;
 }
 
 .link:hover {
@@ -660,7 +660,7 @@ padding: 8px;
 }
 
 @media (max-width: 1040px){
-    .slider-inner{
+    .slider__inner{
         flex-direction: column-reverse;
         align-items: center;
       }
@@ -674,7 +674,7 @@ padding: 8px;
     .slider-box::after{
         content: none;
     }
-    .slider-wrapper{
+    .slider__wrapper{
         max-width:600px;
     }
     .stack{
@@ -721,14 +721,7 @@ padding: 8px;
 }
 
 @media (max-width: 580px){
-    .slide-title{
-        font-size: 42px;
-        line-height: 1.4;
-    }
-    .slide-subtitle{
-        font-size: 32px;
-        line-height: 1;
-    }
+   
     .stack{
         width: 100%;
         padding: 50px 0;
